--- a/desktop-app/src/index.html
+++ b/desktop-app/src/index.html
@@ -1,11 +1,9 @@
 <!DOCTYPE html>
 <html>
-
-<head>
-</head>
-
-<body>
-  <div id="root"></div>
-</body>
-
+  <head>
+    <meta charset="UTF-8">
+  </head>
+  <body>
+    <div id="app"></div>
+  </body>
 </html>
