fixed css import and all that jazz

--- a/bridge/src/index.html
+++ b/bridge/src/index.html
@@ -5,8 +5,8 @@
     <meta charset="UTF-8">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="./node_modules/xterm/css/xterm.css">
     <link href="https://fonts.googleapis.com/css2?family=Raleway:wght@100;200;300;400;500&display=swap" rel="stylesheet">
+    <!-- <link rel="stylesheet" href="node_modules/xterm/css/xterm.css" /> -->
 </head>
 
 <body>
